# google-cloud-rust

./: Cargo.toml
src/auth/: Cargo.toml  build.rs
src/auth/integration-tests/: README.md
src/auth/integration-tests/src/: lib.rs
src/auth/integration-tests/tests/: driver.rs
src/auth/src/: credentials.rs  http.rs  lib.rs  version.rs
src/auth/src/credentials/: api_key_credentials.rs  external_account.rs  impersonated.rs  internal.rs  mds.rs  mds_credential.rs  service_account.rs  service_account_credential.rs  url_sourced_external_account.rs  user_account.rs  user_credential.rs
src/auth/src/credentials/internal/: sts.rs
src/auth/tests/: credentials.rs
src/auth2/src/: credentials.rs
src/auth2/src/credentials/: user_credential.rs
src/gax-internal/src/: grpc.rs
src/gax-internal/tests/: grpc_auth.rs  http_auth.rs
src/gax/src/: lib.rs
src/http_client/: Cargo.toml
src/http_client/src/: client.rs  lib.rs
