[package]
name = "http_client"
version = "0.1.0"
edition = "2024"
publish = ["docs.rs", "crates.io"]

[dependencies]
bytes = "1.5.0"
http = "1.0.0"
reqwest = "0.11.0"
serde = "1.0.0"
tokio = "1.0.0"
auth = { path = "../auth", version = "0.1.0" }
gax = {path="../gax", version ="0.1.0"}
[dev-dependencies]
thiserror = "1.0.0"
[end of src/http_client/Cargo.toml]
